# sniff

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE_V2.md  MIGRATION_APXM.md  architecture.md  examples.md  getting-started.md  index.md
docs/api/: build.md  cache.md  ci.md  ci_build.md  commands.md  compiler.md  conda.md  config.md  deps.md  detect.md  diagnostic.md  diagnostic_checks.md  env.md  index.md  libpath.md  paths.md  remediate.md  scaffold.md  shell.md  toolchain.md  tools.md  validate.md  version.md  workspace.md
src/sniff/: __init__.py  ci.py  ci_build.py  commands.py  conda.py  config.py  deps.py  lockfile.py  remediate.py  scaffold.py  shell.py  tools.py  workspace.py
tests/: test_config.py
