[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sniff"
version = "3.0.0"
description = "Sniff out your Python development environment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Randres Herrera", email = "randres2011@gmail.com" },
]
keywords = [
    "environment",
    "detection",
    "platform",
    "conda",
    "venv",
    "toolchain",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/randreshg/sniff"
Documentation = "https://sniff.readthedocs.io"
Repository = "https://github.com/randreshg/sniff"
Issues = "https://github.com/randreshg/sniff/issues"

[project.optional-dependencies]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "PyYAML>=6.0",
]
tracking = [
    "sniff[cli]",
    "tully>=0.1.0",
]
all = [
    "sniff[cli]",
    "sniff[tracking]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "mypy>=1.8",
    "ruff>=0.2",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sniff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
